--- a/src/assets/styles/recipes.css
+++ b/src/assets/styles/recipes.css
@@ -4,6 +4,7 @@
 @layer components {
  .card { 
   @apply rounded-md bg-surface/80 ring-1 ring-black/10 dark:ring-white/10 min-w-[250px] md:min-w-[300px] p-3;
+  @apply p-2 md:p-3;
 }
 
 .card-focus {
